# pretty-please

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  demo.tape  dist-workspace.toml  flake.nix
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  shell_support.yml
.github/workflows/: ci.yml  publish-crates.yml  release.yml
packaging/aur/: PKGBUILD
src/: cli.rs  error.rs  exec.rs  lib.rs  main.rs
src/shell/: bash.rs  fish.rs  mod.rs  nu.rs  pwsh.rs  zsh.rs
tests/: integration.rs
