[package]
name = "please-cli"
version = "0.1.0"
edition = "2024"
authors = ["Raj Joshi"]
rust-version = "1.85"
description = "The polite sudo."
homepage = "https://github.com/iamrajjoshi/pls"
repository = "https://github.com/iamrajjoshi/pls"
documentation = "https://docs.rs/please-cli"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cli", "sudo", "shell", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
libc = "0.2"
owo-colors = "4"
shell-words = "1"
thiserror = "2"
which = "8"

[[bin]]
name = "pls"
path = "src/main.rs"

[profile.dist]
inherits = "release"
lto = "thin"
